@@ -972,7 +972,10 @@ def cmd_sync_local2remote(args):
 		import pwd, grp
 		attrs = {}
 		src = deunicodise(src)
-		st = os.stat_result(os.stat(src))
+		try:
+			st = os.stat_result(os.stat(src))
+		except OSError, e:
+			raise InvalidFileError(u"%s: %s" % (unicodise(src), e.strerror))
 		for attr in cfg.preserve_attrs_list:
 			if attr == 'uname':
 				try:
@@ -1073,17 +1076,17 @@ def cmd_sync_local2remote(args):
 		uri = S3Uri(item['remote_uri'])
 		seq_label = "[%d of %d]" % (seq, local_count)
 		extra_headers = copy(cfg.extra_headers)
-		if cfg.preserve_attrs:
-			attr_header = _build_attr_header(src)
-			debug(u"attr_header: %s" % attr_header)
-			extra_headers.update(attr_header)
 		try:
+			if cfg.preserve_attrs:
+				attr_header = _build_attr_header(src)
+				debug(u"attr_header: %s" % attr_header)
+				extra_headers.update(attr_header)
 			response = s3.object_put(src, uri, extra_headers, extra_label = seq_label)
-		except S3UploadError, e:
-			error(u"%s: upload failed too many times. Skipping that file." % item['full_name_unicode'])
-			continue
 		except InvalidFileError, e:
 			warning(u"File can not be uploaded: %s" % e)
+			continue
+		except S3UploadError, e:
+			error(u"%s: upload failed too many times. Skipping that file." % item['full_name_unicode'])
 			continue
 		speed_fmt = formatSize(response["speed"], human_readable = True, floating_point = True)
 		if not cfg.progress_meter:
